--- a/toggle/index.html
+++ b/toggle/index.html
@@ -9,8 +9,8 @@
     <body>
 
         <button id="bottone">Clicca</button>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla nobis possimus earum dignissimos? Quidem exercitationem expedita ut illo numquam nihil pariatur atque doloribus! Fugit deserunt non repellat, unde omnis voluptates.</p>
+        <h1>Titolo</h1>
+        <p class="pippo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla nobis possimus earum dignissimos? Quidem exercitationem expedita ut illo numquam nihil pariatur atque doloribus! Fugit deserunt non repellat, unde omnis voluptates.</p>
 
         <script src="main.js" charset="utf-8"></script>
     </body>
