--- a/faq/index.html
+++ b/faq/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <div id="pippo"></div>
         <div class="question">
             <h2>Domanda 1</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, iure repudiandae. Quas praesentium iure possimus aspernatur doloribus reprehenderit, minima porro, accusantium culpa qui vel, iusto quos eaque exercitationem voluptates voluptatibus.</p>
@@ -26,6 +26,10 @@
         </div>
         <div class="question">
             <h2>Domanda 5</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, iure repudiandae. Quas praesentium iure possimus aspernatur doloribus reprehenderit, minima porro, accusantium culpa qui vel, iusto quos eaque exercitationem voluptates voluptatibus.</p>
+        </div>
+        <div class="question">
+            <h2>Domanda 6</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, iure repudiandae. Quas praesentium iure possimus aspernatur doloribus reprehenderit, minima porro, accusantium culpa qui vel, iusto quos eaque exercitationem voluptates voluptatibus.</p>
         </div>
 
